--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <title>Cadastro de Alimentos</title>
   <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 </head>
 <body>
 
